# drone_embedded_code

./: .gitignore  README.md
bash_or_other_scripts/: on_boot.sh
embedded_code/: All_drivers_Header.hpp  Camera_driver.cpp  Distance_sensor_driver.cpp  GPS_driver.cpp  IncludesHeader.hpp  Motor_driver.cpp  Servo_driver.cpp  camera_stabilizer.cpp  main.cpp  makefile  my_program  test_script.py  uncollected_trash.cpp
embedded_code/Components/: Components_Header.hpp  DroneChassis.cpp  camera_stabilizer.cpp  claw_control.cpp
embedded_code/Drivers/: All_drivers_Header.hpp  Bno085_wraper.cpp  Camera_driver.cpp  Drivers_Initializer.cpp  IMU_driver.cpp  Motor_driver.cpp  Servo_driver.cpp  VL53L1XSensor_wraper.cpp
embedded_code/MathHelpers/: MathHelpers.hpp  PIDController.cpp  Timer.cpp
embedded_code/SchedulerControl/: Scheduler.cpp  Task.cpp  (+2 more)
hosted_site_code/: Test.py  Yolov4Trash.py  best.xml  camera_calibration.npz  entryPoint.py  ntzreader.py
pythonTest/: Applycalibration.py  CameraTest.py  ClientPhotoSender.c  ClientPhotoSender.pyx  DistanceSensor.py  PythonRelatedInitialization.c  PythonRelatedInitialization.pyx  RaspGSCamera.c  RaspGSCamera.pyx  SmoothBno085.c  SmoothBno085.pyx  TestBno085SPI.py  TestBno085UART.py  TestBno085i2c.py  TestCython.py  TestGPS.py  TestI2cConnection.py  TestSPI.py  VL53L1XSensor.c  VL53L1XSensor.pyx  cythonSetup.py  requirements.txt  whatCameraIHave.py
tests/: Bno085SPI  Bno085SPI.cpp  Bno085Uart.cpp  Bno085uart  CMakeLists.txt  ServoTest.cpp  TestBno085Communication.cpp  TestCameraFeed.cpp  camera_app  camera_example  servo
